# Aion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.py  text.txt  v0.1.9-release-notes.txt
aion/: __init__.py  __main__.py  _core.py  cli.py  code.py  embed.py  evaluate.py  files.py  git.py  maths.py  parser.py  pdf.py  prompt.py  py.typed  snippets.py  text.py  utils.py  watcher.py
aion/agents/: __init__.py  memory.py  multi.py  planner.py  react.py
aion/algorithms/: README.md  __init__.py  arrays.py  graphs.py  search.py
aion/algorithms/examples/: 01_search_algorithms.ipynb  02_array_utilities.ipynb  README.md
aion/bench/: __init__.py  benchmarks.py
aion/benchmarks/: __init__.py
aion/cache/: __init__.py  core.py  decorator.py  llm_cache.py
aion/config/: README.md  __init__.py  core.py
aion/config/examples/: 01_config_loading_merge.ipynb  README.md  __init__.py  sample.toml  sample_override.yaml
aion/data/: __init__.py  augmentation.py  loaders.py  schema.py  splitting.py
aion/dataframe/: __init__.py
aion/datasets/: __init__.py  _base.py  batch.py  csv.py  generators.py  jsonl.py  loaders.py  schema.py  text.py  toy.py
aion/former/: README.md  __init__.py  example.py
aion/former/core/: README.md  __init__.py  autograd.py  operations.py  tensor.py
aion/former/datasets/: README.md  __init__.py  loader.py  (+1 more)
aion/hub/: __init__.py  launch.py  server.py
aion/io/: README.md  __init__.py  atomic.py  checksum.py  streaming.py
aion/llm_eval/: __init__.py  cost.py  faithfulness.py  similarity.py  toxicity.py
aion/logging_utils/: __init__.py
aion/metrics/: __init__.py
aion/monitor/: README.md  __init__.py  cli.py  gpu.py  hardware.py  history.py  launch.py  processes.py  runtime.py  server.py
aion/packaging/: __init__.py
aion/pipeline/: __init__.py  core.py  steps.py
aion/providers/: README.md  __init__.py  anthropic_provider.py  base.py  errors.py  factory.py  gemini_provider.py  generic_openai.py  http_utils.py  openai_provider.py  structured.py
aion/rag/: README.md  __init__.py  chunking.py  pipeline.py  types.py
aion/serialization/: __init__.py
aion/serve/: __init__.py  app.py
aion/store/: __init__.py  chat_history.py  kv.py  vector.py
aion/structures/: __init__.py  bloom_filter.py  lru.py  priority_queue.py  trie.py  union_find.py
aion/testing/: __init__.py
aion/tokenizer/: __init__.py  bpe.py  vocab.py  wordpiece.py
aion/tools/: README.md  __init__.py  fake_provider.py  loop.py  rate_limit.py  registry.py  retry.py  schemas.py  tokens.py
aion/tracker/: __init__.py  compare.py  core.py
aion/vision/: __init__.py  io.py
aion/visualization/: README.md  __init__.py  arrays.py  matrices.py  report.py  three_d.py  training.py  utils.py
src/: aion_core.cpp
tests/: test_algorithms.py  test_config.py  test_dataframe.py  test_datasets.py  test_io.py  test_maths.py  test_pdf.py  test_smoke.py  test_snippets.py  test_text.py
(+69 files in other folders)
